--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,12 @@
+* {
+  font-family: 'Roboto', sans-serif;
+  color: rgb(83, 83, 83);
+}
+.form {
+  width: 65%;
+  margin-left: 20px;
+}
+
 label {
   display: block;
   margin-top: 15px;
@@ -8,7 +17,7 @@ input[type="checkbox"] {
   margin-right: 5px;
 }
 
-button {
+/* button {
   display: block;
   padding: 10px 20px;
   border: none;
@@ -19,11 +28,11 @@ button {
 .buttons {
   margin-top: 20px;
   display: flex;
-}
+} */
 
-#clearButton {
+/* #clearButton {
   margin-left: 10px;
-}
+} */
 
 img {
   height: 300px;
@@ -31,11 +40,140 @@ img {
 }
 
 .image-container {
-  position: relative;
+  
 }
 
 .image-container img {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+
+
+.plant{
+  display: flex;
+  justify-content: center;
+  /* gap: ; */
+}
+
+p {
+  margin: 10px 0;
+}
+
+.form {
+  margin-left: 20px;
+}
+
+.title-form {
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.question {
+  margin-bottom: 24px;
+}
+
+.question-text {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+/* .answer-group {
+  display: flex;
+} */
+
+.answer-group label {
+  margin-bottom: 5px;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.answer-group input {
+  font-size: 17px;
+  accent-color: #7a5cfa;
+  display: inline;
+}
+
+/* input[type=radio] {
+  width: 8%;
+  height: 8%;
+} */
+
+.btn {
+  margin-top: 20px;
+  border: 1px #7a5cfa solid;
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: white;
+  color: #7a5cfa;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.btn-bg {
+  background-color: #7a5cfa;
+  color: white;
+}
+/* ///////////// */
+
+.card__container {
+  width: 50%;
+}
+
+.card {
+  background-color: #7A5CFA;
+  border-radius: 10px;
+  width: 400px;
+  text-align: center;
+  padding: 20px;
+}
+
+.card p {
+  color: white;
+  font-size: 14px;
+}
+
+.card__title {
+  font-size: 20px !important;
+  color: white;
+}
+
+.card__img {
+  position: relative;
+  height: 300px;
+  background-color: white;
+}
+
+.card_img-position {
+  position: absolute;
+  top: 0%;
+	left: 15%;
+}
+
+.card-info {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.card--font{
+  text-align: left;
+}
+
+.value {
+  text-align: left;
+}
+
+.extras {
+  display: flex;
+  gap: 10px;
+}
+
+.extras p {
+  margin: 0;
+}
+
+.line {
+  display: flex;
+  justify-content: space-evenly;
 }
