--- a/styles/customize.css
+++ b/styles/customize.css
@@ -5,7 +5,7 @@
   height: 34px;
 }
 
-.switch input { 
+.switch input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -19,20 +19,20 @@
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .slider:before {
   position: absolute;
-  content: "";
+  content: '';
   height: 26px;
   width: 26px;
   left: 4px;
   bottom: 4px;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 input:checked + .slider {
@@ -67,19 +67,25 @@ input:checked + .slider:before {
   justify-content: center;
   margin: 5px;
 }
-.blue { background-color: rgb(109, 170, 207); }
-.pink { background-color: rgb(255, 0, 208); }
-.green { background-color: green; }
-.purple { background-color: purple; }
+.blue {
+  background-color: rgb(109, 170, 207);
+}
+.pink {
+  background-color: rgb(255, 0, 208);
+}
+.green {
+  background-color: green;
+}
+.purple {
+  background-color: purple;
+}
 
-.color-option input[type="radio"] {
-  opacity: 0; 
-  position: absolute; 
+.color-option input[type='radio'] {
+  opacity: 0;
+  position: absolute;
   cursor: pointer;
 }
 
 .color-option:hover {
-  box-shadow: 0 0 8px rgba(0, 0, 0, 2)
+  box-shadow: 0 0 8px rgba(0, 0, 0, 2);
 }
-
-
