--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,17 +10,21 @@
 label {
   display: block;
   margin-top: 15px;
-}
-
-.label-customize {
-  display: inline;
+  display: inline-flex;
 }
 
 input[type='radio'],
 input[type='checkbox'] {
   margin-right: 5px;
+  width: 20px;
+  height: 20px;
 }
-
+select[name="plant"] {
+  padding: 10px;
+  border: 3px solid #7a5cfa;
+  border-radius: 8px;
+  font-size: 16px;
+}
 img {
   height: 300px;
   width: 300px;
@@ -42,7 +46,7 @@ p {
 }
 
 .title-form {
-  font-size: 22px;
+  font-size: 28px;
   font-weight: 700;
 }
 
@@ -62,15 +66,22 @@ p {
 }
 
 .answer-group label {
-  margin-bottom: 5px;
+  margin-bottom: 15px;
   font-size: 20px;
   font-weight: 300;
 }
 
 .answer-group input {
-  font-size: 17px;
+  font-size: 22px;
   accent-color: #7a5cfa;
-  display: inline;
+  display: inline-flex;
+}
+.answer-group p {
+  font-size: 22px;
+}
+
+.btn-card {
+  margin-top: 20px;
 }
 
 .btn {
@@ -107,7 +118,7 @@ p {
 }
 
 .card__title {
-  font-size: 20px !important;
+  font-size: 20px;
   color: white;
 }
 
@@ -148,4 +159,101 @@ p {
 .line {
   display: flex;
   justify-content: space-evenly;
+}
+
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: '';
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #7a5cfa;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #7a5cfa;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.color-option {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  border-radius: 50%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+}
+.blue {
+  background-color:rgb(70, 70, 225);
+}
+.pink {
+  background-color: rgb(225, 70, 178);
+}
+.green {
+  background-color: rgb(70, 225, 91);
+}
+.purple {
+  background-color: rgb(142, 70, 225);
+}
+
+.unpainted {
+  border: 1px solid grey;
+}
+
+.color-option input[type='radio'] {
+  opacity: 0;
+  position: absolute;
+  cursor: pointer;
+}
+
+.color-option:hover {
+  box-shadow: 0 0 8px rgba(0, 0, 0, 2);
 }
